[workspace]
members = [
    "catalytic",
    "catalytic_table_to_struct",
    "catalytic_table_to_struct/example",
    "catalytic_macro",
    "catalytic_query_parser",
]

[workspace.package]
edition = "2021"
version = "0.1.15"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

[workspace.dependencies]
scylla = "0.9.0"
once_cell = "1.18.0"
heck = "0.4.1"
tokio = { version = "1.29.1", features = ["time", "rt-multi-thread", "io-util"] }
thiserror = "1.0.44"
futures-util = "0.3.28"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
proc_macro2_helper = "0.2.10"
uuid = "1.4.1"
regex = "1.9.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trybuild = "1.0.82"
dotenv = "0.15.0"
