[workspace]
members = [
    "catalytic",
    "catalytic_table_to_struct",
    "catalytic_table_to_struct/example",
    "catalytic_macro",
    "catalytic_query_parser",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.16"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

[workspace.dependencies]
scylla = "0.9.0"
once_cell = "1.18.0"
heck = "0.4.1"
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "io-util"] }
thiserror = "1.0.48"
futures-util = "0.3.28"
syn = { version = "2.0.31", features = ["full", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
proc_macro2_helper = "0.2.10"
uuid = "1.4.1"
regex = "1.9.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trybuild = "1.0.83"
dotenv = "0.15.0"
