[workspace]
members = [
    "catalytic",
    "catalytic_table_to_struct",
    "catalytic_table_to_struct/example",
    "catalytic_macro",
    "catalytic_query_parser",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.20"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
repository = "https://github.com/Jasperav/catalytic"
readme = "./README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

[workspace.dependencies]
scylla = "0.10.1" # This crate is specifically build for this version
once_cell = "1"
heck = "0.4"
tokio = { version = "1", features = ["time", "rt-multi-thread", "io-util"] }
thiserror = "1"
futures-util = "0.3"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc_macro2_helper = "0.2"
uuid = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
trybuild = "1"
dotenv = "0.15"
