[package]
name = "catalytic"
version = "0.1.4"
edition = "2018"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
description = "ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { workspace = true }
once_cell = { workspace = true }
heck = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }