[package]
name = "catalytic"
description = "ORM for Scylla, fully compatible with Apache Cassandra™"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = { workspace = true }
scylla = { workspace = true }
once_cell = { workspace = true }
heck = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }