[package]
name = "catalytic_macro"
version = "0.1.5"
edition = "2018"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
description = "Macros for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
catalytic_query_parser = { version = "0.1", path = "../catalytic_query_parser" }
catalytic = { version = "0.1", path = "../catalytic" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proc_macro2_helper = { workspace = true }