[package]
name = "catalytic_macro"
description = "Macros for the ORM for Scylla, fully compatible with Apache Cassandra™"
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
catalytic_query_parser = { version = "0.1", path = "../catalytic_query_parser" }
catalytic = { version = "0.1", path = "../catalytic" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proc_macro2_helper = { workspace = true }