[package]
name = "catalytic_query_parser"
version = "0.1.4"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Query parser for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
catalytic_macro = { path = "../catalytic_macro" }
trybuild = { workspace = true }

[dependencies]
catalytic = { version = "0.1", path = "../catalytic" }
catalytic_table_to_struct = { version = "0.1", path = "../catalytic_table_to_struct" }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
