[package]
name = "catalytic_query_parser"
description = "Query parser for the ORM for Scylla, fully compatible with Apache Cassandra™"
edition.workspace = true
version.workspace = true

[dev-dependencies]
catalytic_macro = { path = "../catalytic_macro" }
trybuild = { workspace = true }

[dependencies]
catalytic = { version = "0.1", path = "../catalytic" }
catalytic_table_to_struct = { version = "0.1", path = "../catalytic_table_to_struct" }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
