[package]
name = "catalytic_table_to_struct"
version = "0.1.5"
edition = "2018"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
description = "Table mapper for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/catalytic"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catalytic = { version = "0.1", path = "../catalytic" }
proc-macro2 =  { workspace = true }
quote =  { workspace = true }
heck =  { workspace = true }
