[package]
name = "catalytic_table_to_struct"
description = "Table mapper for the ORM for Scylla, fully compatible with Apache Cassandra™"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
catalytic = { version = "0.1", path = "../catalytic" }
proc-macro2 =  { workspace = true }
quote =  { workspace = true }
heck =  { workspace = true }
