[package]
name = "scylla_orm"
version = "0.1.0"
edition = "2018"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
description = "ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/scylla_orm"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.3.0"
once_cell = "1"
heck = "0.3"
uuid = "0.8"
tokio = { version = "1", features = ["time", "rt-multi-thread", "io-util"] }
tracing = "0.1"
thiserror = "1"
futures-util = "0.3"