[package]
name = "scylla_orm_macro"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
scylla_orm_query_parser = { path = "../scylla_orm_query_parser" }
scylla_orm = { path = "../scylla_orm" }
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc_macro2_helper = "0.2"