[package]
name = "scylla_orm_query_parser"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Query parser for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/scylla_orm"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
scylla_orm_macro = { path = "../scylla_orm_macro" }
trybuild = "1"

[dependencies]
scylla = "0.3"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
scylla_orm = { version = "0.1", path = "../scylla_orm" }
proc-macro2 = "1"
uuid = "0.8"
regex = "1"
scylla_orm_table_to_struct = { version = "0.1", path = "../scylla_orm_table_to_struct" }