[package]
name = "scylla_orm_table_to_struct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO :change to 'real' scylla driver
scylla = { git = "https://github.com/Jasperav/scylla-rust-driver", branch = "main" }
scylla_orm = { path = "../scylla_orm" }
proc-macro2 = "1"
quote = "1"
heck = "0.3"