[package]
name = "scylla_orm_table_to_struct"
version = "0.1.1"
edition = "2018"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
description = "Table mapper for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/scylla_orm"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.3"
scylla_orm = { version = "0.1", path = "../scylla_orm" }
proc-macro2 = "1"
quote = "1"
heck = "0.3"