[package]
name = "example_project"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Example dir for the ORM for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/Jasperav/catalytic"
readme = "../../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
catalytic_table_to_struct = { version = "0.1", path = "../../catalytic_table_to_struct" }
catalytic = { version = "0.1", path = "../../catalytic" }
dotenv = { workspace = true }

[dependencies]
catalytic_macro = { version = "0.1", path = "../../catalytic_macro" }
catalytic = { version = "0.1", path = "../../catalytic" }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
trybuild = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true }
