[package]
name = "example_project"
description = "Example dir for the ORM for Scylla, fully compatible with Apache Cassandra™"
readme = "../../README.md"
edition.workspace = true
version.workspace = true

[build-dependencies]
catalytic_table_to_struct = { version = "0.1", path = "../../catalytic_table_to_struct" }
catalytic = { version = "0.1", path = "../../catalytic" }
dotenv = { workspace = true }

[dependencies]
catalytic_macro = { version = "0.1", path = "../../catalytic_macro" }
catalytic = { version = "0.1", path = "../../catalytic" }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
trybuild = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true }
