[package]
name = "example_project"
description = "Example dir for the ORM for Scylla, fully compatible with Apache Cassandra™"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true

[build-dependencies]
catalytic_table_to_struct = { path = "../../catalytic_table_to_struct" }
catalytic = { path = "../../catalytic" }
dotenv = { workspace = true }

[dependencies]
catalytic_macro = { path = "../../catalytic_macro" }
catalytic = { path = "../../catalytic" }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
trybuild = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true }
